--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,7 @@
 <h1> Students </h1>
 
+<%= link_to "New Student", controller: "students", action: "new" %>
+
 <table>
   <tr>
     <th> First name </th>
@@ -12,6 +14,8 @@
       <td> <%= s.first_name %> </td>
       <td> <%= s.last_name %> </td>
       <td> <%= s.birth_date %> </td>
+      <td> <%= link_to "view", s %>
+      <td> <%= link_to "delete", s, method: :delete %> </td>
     </tr>
   <% end %>
 </table>
