Display, add, update, delete students

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :birth_date %><br>
-    <%= f.date_select :birth_date %>
+    <%= f.date_select :birth_date, start_year:1975, end_year:Time.now.year %>
   </div>
   <div class="actions">
     <%= f.submit %>
