--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,11 +1,18 @@
-<h1>Listing students</h1>
+<h1>The List of Students</h1>
+<br>
+<%= link_to 'ADD Student', new_student_path %>
+<br>
+<br>
 
-<table>
+<%= will_paginate %>
+
+
+<table border="2">
   <thead>
     <tr>
-      <th>Last name</th>
-      <th>First name</th>
-      <th>Birth date</th>
+      <th>Last Name</th>
+      <th>First Name</th>
+      <th>Birthday</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,14 +23,13 @@
         <td><%= student.last_name %></td>
         <td><%= student.first_name %></td>
         <td><%= student.birth_date %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      
+        <td><%= link_to 'Update', edit_student_path(student) %></td>
+        <td><%= link_to 'Delete', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Student', new_student_path %>
+<%= will_paginate %>
