--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -6,8 +6,8 @@
   <%= f.text_field :last_name %>
   
   <%= f.label "Birth date" %>
-  <%= f.date_select :birth_date, start_year: 1900, end_year: Time.now.year, order: [:day, :month, :year] %>
+  <%= f.text_field :birth_date, class: 'datepicker' %>
   
   <%= f.submit %>
-  
+ 
 <% end %>
