--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/error_messages', object: @course %>
+
 <%= form_for @course do |f| %>
   <%= f.label 'Course name'%>
   <%= f.text_field :name %>
