--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/error_messages', object: @student%>
+
 <%= form_for @student do |f| %>
   <%= f.label "First name" %>
   <%= f.text_field :first_name %>
