--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,9 +21,10 @@
   </div>
   <div class="field">
     <%= f.label :birthday %><br>
-    <%= f.date_select :birthday %>
+    <%= f.date_field :birthday %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
