I did some coloring

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
+<p class = "studs">
+  <strong class="show">First name:</strong>
   <%= @student.first_name %>
 </p>
 
-<p>
-  <strong>Last name:</strong>
+<p class = "studs">
+  <strong class="show">Last name:</strong>
   <%= @student.last_name %>
 </p>
 
-<p>
-  <strong>Birthday:</strong>
+<p class = "studs">
+  <strong class="show">Birthday:</strong>
   <%= @student.birthday %>
 </p>
 
