--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.fancy {
+  color:blue;
+  font-size:15px;
+}
+
+.studs {
+  color:#0229bf;
+  font-size:15px;
+}
+
+.links:hover{ 
+  color:#0229bf;
+  background-color:#00bfff;
+  text-decoration:none;
+}
+
+.field {
+  color:blue;
+  font-size:15px;
+}
+
+.show {
+  color:blue;
+  font-size:15px;
+}
