--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing students</h1>
+<h1 style="color:#06185c">Listing students</h1>
 
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Birthday</th>
+      <th class="fancy">First name</th>
+      <th class = "fancy">Last name</th>
+      <th class = "fancy">Birthday</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +13,12 @@
   <tbody>
     <% @students.each do |student| %>
       <tr>
-        <td><%= student.first_name %></td>
-        <td><%= student.last_name %></td>
-        <td><%= student.birthday %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="studs"><%= student.first_name %></td>
+        <td class="studs"><%= student.last_name %></td>
+        <td class="studs"><%= student.birthday %></td>
+        <td class="links"><%= link_to 'Show', student %></td>
+        <td class="links"><%= link_to 'Edit', edit_student_path(student) %></td>
+        <td class="links"><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
