--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Student</h1>
-<%= form_for(@student) do |f| %>
-  <%= f.label "First Name" %> 
+<%= form_for(@course) do |f| %>
+  <%= f.label "Name" %> 
   <%= f.text_field :first_name %> <br>
   <%= f.label "Last Name" %>
   <%= f.text_field :last_name %><br>
