--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,24 @@
-<div>
+<h2>
   <%= @course.name %>
-</div>
+</h2>
 
+<div>
 <%= link_to 'edit', edit_course_path(@course) %>
 <%= link_to 'delete', @course, method: :delete %>
+<%= link_to 'add student', add_student_path %>
+</div>
+
+
+<% if @students.any? %>
+<h3> Enrolled students </h3>
+  <ul>
+    <% @students.each do |s| %>
+      <li> <%= s.first_name %> <%= s.last_name %> </li>
+    <% end %>
+  </ul>
+<% else %>
+<h3> No enrolled students </h3>
+<% end %>
+
+  
+
