--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -5,7 +5,7 @@
 <div>
 <%= link_to 'edit', edit_course_path(@course) %>
 <%= link_to 'delete', @course, method: :delete %>
-<%= link_to 'add student', add_student_path %>
+<%= link_to 'Add student', add_student_path %>
 </div>
 
 
