--- a/app/views/courses/add_student.html.erb
+++ b/app/views/courses/add_student.html.erb
@@ -1,7 +1,15 @@
 <h3> Add a student </h3>
-  <%= form_tag enrollments_path, method: 'post' do %>
-    <%= select_tag 'student_id', options_from_collection_for_select(@students, 'id', 'full_name')%>
-    <%= hidden_field_tag 'course_id', @course.id %>
-    <%= submit_tag 'Submit' %>
-  <% end %>
+  
+  <%= will_paginate @students %>
+  
+  <table>
+    <% @students.each do |s| %>
+      <tr>
+        <td> <%= s.full_name %> </td>
+        <td> <%= link_to 'Add', enrollments_path(student_id: s.id, course_id: @course.id), method: :post %> </td>
+      </tr>
+    <% end %>
+  </table>
+  
+  <%= will_paginate @students %>
   
