--- a/app/views/courses/students.html.erb
+++ b/app/views/courses/students.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @students.each do |s| %>
-    <li> <%= s.first_name %> <%= s.last_name %> </li>
+    <li> <%= s.full_name %> </li>
   <% end %>
 </ul>
