--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -14,7 +14,7 @@
   <table>
     <% @courses.each do |course| %>
       <tr>
-        <td> <%= course.name %> </td>
+        <td> <%= link_to course.name, course_path(course) %> </td>
         <td> <%= link_to 'remove', delete_enrollment_path(student_id: @student.id, course_id: course.id) %> </td>
       </tr>
     <% end %>
