--- a/app/views/courses/add_student.html.erb
+++ b/app/views/courses/add_student.html.erb
@@ -5,7 +5,7 @@
   <table>
     <% @students.each do |s| %>
       <tr>
-        <td> <%= s.full_name %> </td>
+        <td> <%= link_to s.full_name, student_path(s) %> </td>
         <td> <%= link_to 'Add', enrollments_path(student_id: s.id, course_id: @course.id), method: :post %> </td>
       </tr>
     <% end %>
