--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,7 +14,7 @@
   <table>
     <% @students.each do |s| %>
      <tr> 
-        <td> <%= s.full_name %> </td>
+        <td> <%= link_to s.full_name, student_path(s) %> </td>
         <td> <%= link_to 'remove', delete_enrollment_path(student_id: s.id, course_id: @course.id)%>
     <% end %>
   </ul>
