fixed friendly redirection

--- a/app/views/courses/add_student.html.erb
+++ b/app/views/courses/add_student.html.erb
@@ -6,7 +6,8 @@
     <% @students.each do |s| %>
       <tr>
         <td> <%= link_to s.full_name, student_path(s) %> </td>
-        <td> <%= link_to 'Add', enrollments_path(student_id: s.id, course_id: @course.id), method: :post %> </td>
+        <td> <%= link_to 'Add', enrollments_path(student_id: s.id,
+                 course_id: @course.id, last_url: course_path(@course)), method: :post %> </td> 
       </tr>
     <% end %>
   </table>
