--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -15,7 +15,8 @@
     <% @students.each do |s| %>
      <tr> 
         <td> <%= link_to s.full_name, student_path(s) %> </td>
-        <td> <%= link_to 'remove', delete_enrollment_path(student_id: s.id, course_id: @course.id)%>
+        <td> <%= link_to 'remove', delete_enrollment_path(student_id: s.id,
+                 course_id: @course.id, last_url: course_path(@course)) %> </td>
     <% end %>
   </ul>
 <% else %>
