--- a/Stud_app/app/views/studs/show.html.haml
+++ b/Stud_app/app/views/studs/show.html.haml
@@ -1,15 +1,55 @@
 = "Students informations: "
 %br
-="students's first name: " 
-= @stud.first_name
+%table{ :border => "1"}
+	%thead
+		%tr
+			%td 
+				="students's first name " 
+			%td
+				="students's last name"
+			%td
+				="students's date of birth"
+			%td
+				="student's email"
+	%tbody
+		%tr
+			%td
+				= @stud.first_name
+			%td
+				= @stud.last_name
+			%td
+				= @stud.birth_date
+			%td
+				= @stud.email
+			%td
 %br
-="students's last name: "
-= @stud.last_name
+
+= "Courses where #{@stud.first_name} #{@stud.last_name} is enrolled:"
 %br
-="students's date of birth: "
-= @stud.birth_date
+%table{ :border => "1"}
+	%thead
+		%tr
+			="Course's name"
+	%tbody
+		- @courses_stud.each do |co|
+			%tr
+				%td
+					= co.name
+				%td
+					= link_to "Delete course", enrollement_path(stud_id: @stud.id, course_id: co.id), method: :delete, data: { confirm: 'Are you sure?' }
+
 %br
-="student's email: "
-= @stud.email
-%br
+= "Available courses"
+%table{ :border => "1"}
+	%thead
+		%tr
+			="Course's name"
+	%tbody
+		- @courses.each do |c|
+			%tr
+				%td
+					= c.name
+				%td
+					= link_to "Add course", enrollements_path(stud_id: @stud.id, course_id: c.id), method: :post
 = link_to "Back", studs_path
+
