--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<nav>
-  <ul>
+<nav class='navbar navbar-default clearfix menu-bar' role='navigation'>
+  <ul class='nav navbar-nav'>
     <li> <%= link_to 'Students', students_path %> </li>
     <li> <%= link_to 'Courses', courses_path %> </li>
   </ul>
