--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -1,7 +1,7 @@
-<tr>
+<tr class='clickable-row', href= <%= student_path(student)%> >
   <td> <%= student.last_name %> </td>
   <td> <%= student.first_name %> </td>
   <td> <%= student.birth_date %> </td>
-  <td> <%= link_to "view", student %>
+  <td> <%= link_to 'view', student %> </td>
   <td> <%= link_to "delete", student, method: :delete %> </td>
 </tr>
