--- a/app/views/students/add_course.html.erb
+++ b/app/views/students/add_course.html.erb
@@ -1,7 +1,7 @@
 <h3> Select a course </h3>
   <%= will_paginate @courses %>
   
-  <table>
+  <table class='mytable20'>
     <% @courses.each do |c| %>
     <tr>
       <td> <%= link_to c.name, course_path(c) %> </td>
