add bootstrap to app

--- a/Stud_app/app/views/courses/index.html.haml
+++ b/Stud_app/app/views/courses/index.html.haml
@@ -1,6 +1,7 @@
-= "All the courses" 
+.text_header
+	= "All the courses" 
 %br
-%table{ :border => '1'}
+%table{ :id => 'users', :class => "table table-hover table-bordered"}
 	%thead
 		%tr
 			%td
