--- a/Stud_app/app/assets/stylesheets/application.css
+++ b/Stud_app/app/assets/stylesheets/application.css
@@ -5,10 +5,30 @@
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
  * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
  *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
  *
- *= require_self
  *= require_tree .
- *= require jquery-ui
+ *= require dataTables/jquery.dataTables
+ *= require_self
  */
+ /*!
+ * Bootstrap v3.2.0 (http://getbootstrap.com)
+ * Copyright 2011-2014 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
+/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+body{
+background-image: url('background.jpg');
+}
+
+.text{
+color: #00000;
+}
+.text_header{
+color: #ffffff;
+font-size: 20px;
+}
