--- a/Stud_app/app/views/studs/index.html.haml
+++ b/Stud_app/app/views/studs/index.html.haml
@@ -1,8 +1,8 @@
 .text_header
-	="List of users"
+	="List of students"
 %br
 .text
-	%table{  :id => 'users', :class => "table table-hover table-bordered" }
+	%table{:id => 'users', :class => "table table-hover "}
 		%thead
 			%tr
 				%td 
