--- a/Stud_app/app/views/studs/show.html.haml
+++ b/Stud_app/app/views/studs/show.html.haml
@@ -1,55 +1,52 @@
-.header_text
+.text_header
 	= "Students informations: "
 %br
-%table{ :id => 'users', :class => "table table-hover table-bordered"}
-	%thead
-		%tr
-			%td 
-				="students's first name " 
-			%td
-				="students's last name"
-			%td
-				="students's date of birth"
-			%td
-				="student's email"
-	%tbody
-		%tr
-			%td
-				= @stud.first_name
-			%td
-				= @stud.last_name
-			%td
-				= @stud.birth_date
-			%td
-				= @stud.email
-%br
-
-= "Courses where #{@stud.first_name} #{@stud.last_name} is enrolled:"
-%br
-%table{ :id => 'users', :class => "table table-hover table-bordered"}
-	%thead
-		%tr
-			="Course's name"
-	%tbody
-		- @courses_stud.each do |co|
+.text
+	%table{ :id => 'users', :class => "table table-hover table-bordered"}
+		%thead
+			%tr
+				%td 
+					="students's first name " 
+				%td
+					="students's last name"
+				%td
+					="students's date of birth"
+				%td
+					="student's email"
+		%tbody
 			%tr
 				%td
-					= co.name
+					= @stud.first_name
 				%td
-					= link_to "Delete course", enrollement_path(stud_id: @stud.id, course_id: co.id), method: :delete, data: { confirm: 'Are you sure?' }
+					= @stud.last_name
+				%td
+					= @stud.birth_date
+				%td
+					= @stud.email
+	%br
 
-%br
-= "Available courses"
-%table{:id => 'users', :class => "table table-hover table-bordered"}
-	%thead
-		%tr
-			="Course's name"
-	%tbody
-		- @courses.each do |c|
-			%tr
-				%td
-					= c.name
-				%td
-					= link_to "Add course", enrollements_path(stud_id: @stud.id, course_id: c.id), method: :post
-= link_to "Back", studs_path
+	= "Courses where #{@stud.first_name} #{@stud.last_name} is enrolled:"
+	%br
+	%table{ :id => 'users', :class => "table table-hover table-bordered"}
+		%thead
+		%tbody
+			- @courses_stud.each do |co|
+				%tr
+					%td
+						= co.name
+					%td
+						= link_to "Delete course", enrollement_path(stud_id: @stud.id, course_id: co.id), method: :delete, data: { confirm: 'Are you sure?' }
+
+	%br
+	= "Available courses"
+	%table{:id => 'users', :class => "table table-hover table-bordered"}
+		%thead
+		%tbody
+			- @courses.each do |c|
+				%tr
+					%td
+						= c.name
+					%td
+						= link_to "Add course", enrollements_path(stud_id: @stud.id, course_id: c.id), method: :post
+	= link_to "Back", studs_path
 
