--- a/Stud_app/app/assets/stylesheets/dataTables.bootstrap.css
+++ b/Stud_app/app/assets/stylesheets/dataTables.bootstrap.css
@@ -50,9 +50,8 @@ box-sizing: content-box;
 
 table.dataTable {
 clear: both;
-height:680px;
-width:1460px;
-margin-top: 10px !important;
+width:80% !important;
+margin-top: 100px !important;
 margin-bottom: 6px !important;
 max-width: none !important;
 }
