--- a/Stud_app/app/views/layouts/application.html.haml
+++ b/Stud_app/app/views/layouts/application.html.haml
@@ -11,5 +11,7 @@
     %script{language: "javascript", src: "//cdn.datatables.net/1.10-dev/js/jquery.dataTables.min.js", type: "text/javascript"}
     %script{language: "javascript", src: "dataTables.bootstrap.js", type: "text/javascript"}
     %script{charset: "utf-8", type: "text/javascript"}
-  %body
+  %body 
+    = render 'shared/error_messages'
+    = render 'shared/copyrights'
     = yield
