--- a/Stud_app/app/views/courses/index.html.haml
+++ b/Stud_app/app/views/courses/index.html.haml
@@ -2,7 +2,7 @@
 	= "All the courses" 
 %br
 .text
-	%table{ :id => 'users', :class => "table table-hover "}
+	%table{ :id => 'users', :class => "table table-striped "}
 		%thead
 			%tr
 				%td
