--- a/Stud_app/app/views/studs/index.html.haml
+++ b/Stud_app/app/views/studs/index.html.haml
@@ -2,7 +2,7 @@
 	="List of students"
 %br
 .text
-	%table{:id => 'users', :class => "table table-hover "}
+	%table{:id => 'users', :class => "table table-striped "}
 		%thead
 			%tr
 				%td 
