--- a/Stud_app/app/views/layouts/application.html.haml
+++ b/Stud_app/app/views/layouts/application.html.haml
@@ -11,7 +11,30 @@
     %script{language: "javascript", src: "//cdn.datatables.net/1.10-dev/js/jquery.dataTables.min.js", type: "text/javascript"}
     %script{language: "javascript", src: "dataTables.bootstrap.js", type: "text/javascript"}
     %script{charset: "utf-8", type: "text/javascript"}
-  %body 
-    = render 'shared/error_messages'
-    = render 'shared/copyrights'
-    = yield
+
+  %body
+    .col-md-12
+      .row
+        .navbar.navbar-invert.navbar-fixed-top#back_container{role: "navigation"}
+          .container
+            .navbar-header
+              %button.navbar-toggle.collapsed{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", type: "button"}
+                %span.sr-only Toggle navigation
+                %span.icon-bar
+                %span.icon-bar
+                %span.icon-bar
+            .navbar-collapse.collapse
+              %ul.nav.navbar-nav
+              
+              %ul.nav.navbar-nav.navbar-right
+                %li.active
+                  %a{href: static_pages_home_path} Home
+                %li
+                  %a{href: static_pages_about_path} About
+                %li
+                  %a{href: static_pages_help_path} Help
+      .row
+        .pages
+          = render 'shared/error_messages'
+          = render 'shared/copyrights'
+          = yield
