--- a/Stud_app/app/views/courses/show.html.haml
+++ b/Stud_app/app/views/courses/show.html.haml
@@ -6,44 +6,8 @@
 %br
 .text
 	= "Students fromt the course  #{@course.name} :"
-	%table{  :id => 'users', :class => "table table-hover table-bordered"}
-		%thead
-			%tr
-				%td
-					="Stus's first name"
-				%td
-					= "Stud's last name"
-				%td
-					= "Options"
-		%tbody
-			- @stud_courses.each do |co|
-				%tr
-					%td
-						= co.first_name
-					%td
-						=co.last_name
-					%td
-						= link_to "Delete student", enrollement_path(stud_id: co.id, course_id: @course.id), method: :delete, data: { confirm: 'Are you sure?' }
+	= render 'table1'
 
 	%br
 	= "Available students"
-	%table{  :id => 'users', :class => "table table-hover table-bordered"}
-		%thead
-			%tr
-				%td
-					="Student's first name"
-				%td
-					= "Student's last name"
-				%td
-					= "Options"
-		%tbody
-			- @students.each do |s|
-				%tr
-					%td
-						= s.first_name
-					%td
-						= s.last_name
-					%td
-						= link_to "Add stud", enrollements_path(stud_id: s.id, course_id: @course.id), method: :post
-	= link_to "Back", courses_path
-
+	= render 'table2'
