--- a/Stud_app/app/assets/stylesheets/static_pages.css
+++ b/Stud_app/app/assets/stylesheets/static_pages.css
@@ -2,3 +2,8 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+.page_format{
+  text-align: center;
+  margin-top:8%;
+  margin-left:0 ;
+}
