--- a/Stud_app/app/views/static_pages/home.html.haml
+++ b/Stud_app/app/views/static_pages/home.html.haml
@@ -1,4 +1,4 @@
-.text_header
-  Welcome to students management.
-  In order to see the next content, you need to be logged in. Press login if you have an acout, or register to create a new one!
-  = "Copyrights: Dinis Alexandru Catalin"
+.page_format
+  .text_header
+    Welcome to students management.
+    In order to see the next content, you need to be logged in. Press login if you have an acout, or register to create a new one!
