--- a/Stud_app/app/views/studs/index.html.haml
+++ b/Stud_app/app/views/studs/index.html.haml
@@ -2,39 +2,4 @@
 	="List of students"
 %br
 .text
-	%table{:id => 'users', :class => "table table-striped "}
-		%thead
-			%tr
-				%td 
-					="students's first name " 
-				%td
-					="students's last name"
-				%td
-					="students's date of birth"
-				%td
-					="student's email"
-				%td{:colspan => '3'}
-					= "Options"
-		%tbody
-
-		- @users.each do |user|
-			%tr
-				%td
-					= user.first_name
-				%td
-					= user.last_name
-				%td
-					= user.birth_date
-				%td
-					= user.email
-				%td
-					= link_to "Update student", edit_stud_path(user.id)
-				%td
-					= link_to "Delete student", stud_path(user.id), method: :delete, data: { confirm: 'Are you sure?' }
-				%td
-					= link_to "Show", stud_path(user.id), method: :get
-					
-	= link_to "Add student", new_stud_path
-	%br
-	= link_to "Switch to courses", courses_path
-	= will_paginate @users
+	= render 'index_table'
