--- a/Stud_app/app/views/studs/new.html.haml
+++ b/Stud_app/app/views/studs/new.html.haml
@@ -2,3 +2,4 @@
     = "New user"
 = form_for @stud, method: :post, url: studs_path(id: @stud.id) do |u|
     = render partial: 'submit_form', locals: { u: u }
+= link_to "Back", studs_path
