some small changes

--- a/Stud_app/app/views/static_pages/home.html.haml
+++ b/Stud_app/app/views/static_pages/home.html.haml
@@ -8,6 +8,6 @@
     %br
     %br
     .options_index
-      %ul
+      %ul#list
         %li #{link_to 'Students', studs_path}
         %li #{link_to 'Courses', courses_path}
